# libshr-glib

./: Makefile.am  configure.ac  shr-glib-1.0.pc.in
src/: Makefile.am  shr-bindings-sections.txt  shr-bindings.h  shr-bindings.stamp  shr-bindings.types  shr-bindingsprivate.c  shr-bindingsprivate.h  shr-marshallers.c  shr-marshallers.h  shr-marshallers.list  shr-phonefsousage.c  shr-phonefsousage.h  shr-phoneuicallmanagement.c  shr-phoneuicallmanagement.h  shr-phoneuicontacts.c  shr-phoneuicontacts.h  shr-phoneuidialer.c  shr-phoneuidialer.h  shr-phoneuiidlescreen.c  shr-phoneuiidlescreen.h  shr-phoneuimessages.c  shr-phoneuimessages.h  shr-phoneuinotification.c  shr-phoneuinotification.h  shr-phoneuiphonelog.c  shr-phoneuiphonelog.h  shr-phoneuisettings.c  shr-phoneuisettings.h  shr-proxymanager.c  shr-proxymanager.h  shr-types.h
